[package]
name = "fidoprobe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
authenticator = { git = "https://github.com/mozilla/authenticator-rs", version = "0.4.0-alpha.24", default-features = false, features = ["crypto_openssl"] }
base64 = "0.22.1"
env_logger = "0.11.3"
getopts = "0.2.21"
rand = "0.8.5"
rpassword = "7.3.1"
